feat: Redesign site with WeCare branding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeGIVE - Surplus Redistribution</title>
+    <title>WeCare - Surplus Redistribution</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,10 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <h1 class="logo">WeGIVE</h1>
+            <div class="logo-container">
+                <h1 class="logo">WeCare</h1>
+                <p class="tagline">Turn Surplus Into Social Impact</p>
+            </div>
             <nav class="main-nav">
                 <a href="#donor-section" class="nav-link active">For Donors</a>
                 <a href="#ngo-section" class="nav-link">For NGOs</a>
