fix: Add cache-buster to app.js to resolve navigation bug

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2.0"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnOXlICAicLh2i0MBFh1a72YWTBMbboEA&callback=initMap&libraries=geometry,places" defer></script>
 </body>
 </html>
