feat: Enhance surplus reporting and user feedback
- Update report generation to include ESG-aligned metrics (Governance, Social, Environmental).
- Add a success message after a user submits a surplus item, improving user feedback.
- Redirect user to the marketplace after successful submission.
- Add an example report file.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                     </div>
                     <button type="submit" class="btn btn-primary"><span class="material-icons">add_circle</span> Add to Marketplace</button>
                 </form>
+				<div id="success-message" class="success-message" style="display: none;" aria-live="polite">
+					<span class="material-icons">check_circle</span>
+					Donation successfully listed! Redirecting to the marketplace...
+				</div>
             </div>
         </section>
 
